# SurGU.AI_Svetlana--ya-ne-slyshu-hrusta-BEZrukiE_23_33_59

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements-openai.txt  requirements-tesseract.txt  requirements-transformers.txt  requirements.txt  test-tvv.py
TakVamVidno/: __init__.py  __main__.py  exceptions.py  takvamvidno.py  tvv.py
TakVamVidno/extractors/: __init__.py  detect_file_type.py
TakVamVidno/extractors/images/: __init__.py  _openai.py  _tesseract.py  _transformers.py  base.py  prepare_images.py
TakVamVidno/extractors/voice/: __init__.py  _local_whisper.py  _openai_whisper.py  base.py  prepare_audio.py
TakVamVidno/providers/: __init__.py  _openai.py  _transformers.py  base.py  load_prompt.py  prompt
TakVamVidno/tests/: test_openai_ocr.py  test_prepare_image.py
TakVamVidno/visualization/: __init__.py  mind_map.py
fuck/: __init__.py  __main__.py  enums.py  fuck.py
fuck/ocr/: _openai.py  _tesseract.py  _transformers.py  base.py  prepare_image.py
fuck/providers/: __init__.py  _openai.py  _transformers.py
fuck/tests/: test_openai_ocr.py  test_prepare_image.py
tests/: test_openai_ocr.py  test_prepare_image.py  test_transformers_ocr.py
